tests/fixtures/invalid/pow_bool_bool_str.py
# Cannot call pow() with Bool, Bool, Str
x = pow(True, True, "hello")
